# opad

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  README.md  dist-workspace.toml  mdsf.json  mise.toml
.github/: dependabot.yml
.github/workflows/: release-crates.yml  validate.yml
cli/: Cargo.toml  output.yaml
cli/src/: main.rs
cli/src/cli/: mod.rs
cli/src/commands/: completions.rs  mod.rs
cli/src/commands/tui/: mod.rs
cli/src/error/: mod.rs
cli/src/fs/: mod.rs
cli/src/logging/: mod.rs
cli/src/package_managers/: bun.rs  cabal.rs  cargo.rs  crystal.rs  deno.rs  elm.rs  error.rs  gleam.rs  lerna.rs  mod.rs  npm.rs  pnpm.rs  poetry.rs  pubspec.rs  pyproject.rs  rye.rs  uv.rs  yarn.rs
cli/src/parsers/: json.rs  toml.rs  yaml.rs
cli/tests/: completions.rs
cli/wix/: main.wxs
