[workspace]
members = ["cli"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
homepage = "https://github.com/hougesen/crosspmv?tab=readme-ov-file"
authors = ["Mads Hougesen <mads@mhouge.dk>"]
license = "MIT"
repository = "https://github.com/hougesen/crosspmv"
documentation = "https://github.com/hougesen/crosspmv#readme"

[workspace.dependencies]
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = "4.5.50"
clap_complete_nushell = "4.5.5"
crossterm = "0.29.0"
ignore = "0.4.23"
inquire = "0.7.5"
marked-yaml = "0.7.2"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tempfile = "3.20.0"
toml_edit = "0.22.26"
