[workspace]
members = ["cli"]
resolver = "3"

[workspace.package]
version = "0.0.1-dev"
edition = "2024"
homepage = "https://github.com/hougesen/opad?tab=readme-ov-file"
authors = ["Mads Hougesen <mads@mhouge.dk>"]
license = "MIT"
repository = "https://github.com/hougesen/opad"
documentation = "https://github.com/hougesen/opad#readme"
readme = "README.md"

[workspace.dependencies]
assert_cmd = "2.0.17"
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.53"
clap_complete_nushell = "4.5.7"
crossterm = "0.29.0"
ignore = "0.4.23"
inquire = "0.7.5"
marked-yaml = "0.8.0"
predicates = "3.1.3"
rand = "0.9.1"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tempfile = "3.20.0"
toml_edit = "0.22.26"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
