[package]
name = "crosspmv"
version = { workspace = true }
edition = { workspace = true }
description = "Easily set package version across multiple package manager systems in mono repositories"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = ["monorepository"]
homepage = { workspace = true }
readme = { workspace = true }
documentation = { workspace = true }
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_complete_nushell = { workspace = true }
crossterm = { workspace = true }
ignore = { workspace = true }
inquire = { workspace = true }
marked-yaml = { workspace = true }
serde_json = { workspace = true }
toml_edit = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
