[package]
name = "opad"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Easily manage package version across multiple package manager systems in mono repositories"
documentation = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = ["monorepository", "package-management"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.wix]
upgrade-guid = "7F7EA683-233A-47AB-9C55-BE3AE1648468"
path-guid = "5AD1BCF8-D6E3-4DD0-947C-4AE8D17020E9"
license = false
eula = false

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_complete_nushell = { workspace = true }
crossterm = { workspace = true }
ignore = { workspace = true }
inquire = { workspace = true }
marked-yaml = { workspace = true }
serde_json = { workspace = true }
toml_edit = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
